--- a/provision.yml
+++ b/provision.yml
@@ -3,7 +3,7 @@
   sudo: yes
   vars:
     home_dir: "/home/berto/"
-    download_dir: "{{ home_dir }}Downloads/"
+    install_dir: "{{ home_dir }}install/"
 
   tasks:
 
@@ -46,16 +46,15 @@
       - zsh
       - autojump
       - libreoffice
-      - lolcat
       - cmus
 
   # Sublime
   - name: Get SublimeText deb file
     sudo: no
-    get_url: url="http://c758482.r82.cf2.rackcdn.com/sublime-text_build-3080_amd64.deb" dest="{{ download_dir }}sublime.deb"
+    get_url: url="http://c758482.r82.cf2.rackcdn.com/sublime-text_build-3083_amd64.deb" dest="{{ install_dir }}sublime.deb"
 
   - name: Install SublimeText
-    apt: deb="{{ download_dir }}sublime.deb"
+    apt: deb="{{ install_dir }}sublime.deb"
 
   # remove unneeded packages
   - name: Remove unneeded packages
@@ -76,10 +75,10 @@
   # Vagrant
   - name: Get vagrant deb file
     sudo: no
-    get_url: url="https://dl.bintray.com/mitchellh/vagrant/vagrant_1.7.2_x86_64.deb" dest="{{ download_dir }}vagrant.deb"
+    get_url: url="https://dl.bintray.com/mitchellh/vagrant/vagrant_1.7.4_x86_64.deb" dest="{{ install_dir }}vagrant.deb"
 
   - name: Install Vagrant
-    apt: deb="{{ download_dir }}vagrant.deb"
+    apt: deb="{{ install_dir }}vagrant.deb"
 
   - name: Install vagrant lxc dependencies.
     apt: pkg={{ item }}
@@ -108,22 +107,22 @@
     ignore_errors: yes
 
   # geospatial
-  - name: Ensure ppa:ubuntugis-unstable/ppa repository key is added
-    apt_key: id=314DF160 url='http://keyserver.ubuntu.com/pks/lookup?op=get&search=0x089EBE08314DF160' 
+#  - name: Ensure ppa:ubuntugis-unstable/ppa repository key is added
+#    apt_key: id=314DF160 url='http://keyserver.ubuntu.com/pks/lookup?op=get&search=0x089EBE08314DF160' 
 
-  - name: Ensure ppa:ubuntugis-unstable/ppa repository is added to the apt sources
-    apt_repository: repo='deb http://ppa.launchpad.net/ubuntugis/ubuntugis-unstable/ubuntu vivid main' state=present
+#  - name: Ensure ppa:ubuntugis-unstable/ppa repository is added to the apt sources
+#    apt_repository: repo='deb http://ppa.launchpad.net/ubuntugis/ubuntugis-unstable/ubuntu trusty main' state=present
 
-  - name: Ensure ppa:ubuntugis-unstable/ppa source repository is added to the apt sources
-    apt_repository: repo='deb-src http://ppa.launchpad.net/ubuntugis/ubuntugis-unstable/ubuntu vivid main' state=present update_cache=yes
+#  - name: Ensure ppa:ubuntugis-unstable/ppa source repository is added to the apt sources
+#    apt_repository: repo='deb-src http://ppa.launchpad.net/ubuntugis/ubuntugis-unstable/ubuntu trusty main' state=present update_cache=yes
 
 
   # Geospatial packages
-  - name: Geospatial packges (gdal, qgis, etc)
-    apt: pkg={{ item }}
-    with_items:
-      - gdal-bin
-      - qgis
+#  - name: Geospatial packges (gdal, qgis, etc)
+#    apt: pkg={{ item }}
+#    with_items:
+#      - gdal-bin
+#      - qgis
 
   - name: Set zsh to default shell.
     user: name=berto shell=/bin/zsh
@@ -136,11 +135,11 @@
       - flake8
 
     # nodejs ppa
-  - name: Ensure ppa:chris-lea/node.js repository key is added
-    apt_key: id=314DF160 url='http://keyserver.ubuntu.com/pks/lookup?op=get&search=0x6B827C12C2D425E227EDCA75089EBE08314DF160' 
+#  - name: Ensure ppa:chris-lea/node.js repository key is added
+#    apt_key: id=314DF160 url='http://keyserver.ubuntu.com/pks/lookup?op=get&search=0x6B827C12C2D425E227EDCA75089EBE08314DF160' 
 
-  - name: Ensure ppa:chris-lea/node.js to repository is added to the apt sources
-    apt_repository: repo='deb http://ppa.launchpad.net/chris-lea/node.js/ubuntu vivid main' state=present update_cache=yes
+#  - name: Ensure ppa:chris-lea/node.js to repository is added to the apt sources
+#    apt_repository: repo='deb http://ppa.launchpad.net/chris-lea/node.js/ubuntu trusty main' state=present update_cache=yes
 
   # node-js
   - name: Make sure nodejs is installed
