--- a/provision.yml
+++ b/provision.yml
@@ -24,6 +24,8 @@
   - name: Install common packages
     apt: pkg={{ item }}
     with_items:
+      - screen
+      - nano
       - debian-goodies
       - cmake
       - rake
