--- a/provision.yml
+++ b/provision.yml
@@ -49,6 +49,7 @@
       - libreoffice
       - cmus
       - npm
+      - sshpass
 
   # Chrome
   - name: "apt | ensure Google linux signing key present"
