--- a/provision.yml
+++ b/provision.yml
@@ -84,98 +84,5 @@
       - libdnet
       - dnet-common
       - avahi-daemon
-
-  # Vagrant
-  - name: Get vagrant deb file
-    sudo: no
-    get_url: url="https://dl.bintray.com/mitchellh/vagrant/vagrant_1.7.4_x86_64.deb" dest="{{ install_dir }}vagrant.deb"
-
-  - name: Install Vagrant
-    apt: deb="{{ install_dir }}vagrant.deb"
-
-  - name: Install vagrant lxc dependencies.
-    apt: pkg={{ item }}
-    with_items:
-      - redir
-      - bridge-utils
-      - lxc
-      - lxc-templates
-      - cgroup-lite
-
-  - name: List vagrant plugins
-    command: vagrant plugin list
-    register: vagrant_plugins
-
-  - name: Install Vagrant lxc provider.
-    sudo: no
-    shell: vagrant plugin install vagrant-lxc
-    when: '"vagrant-lxc" not in vagrant_plugins'
-
-  - name: Add lxc base boxes.
-    sudo: no
-    shell: vagrant box add "https://vagrantcloud.com/fgrehm/boxes/"{{ item }}"-lxc"
-    with_items:
-      - precise64
-      - trusty64
-    ignore_errors: yes
-
-  # geospatial
-#  - name: Ensure ppa:ubuntugis-unstable/ppa repository key is added
-#    apt_key: id=314DF160 url='http://keyserver.ubuntu.com/pks/lookup?op=get&search=0x089EBE08314DF160' 
-
-#  - name: Ensure ppa:ubuntugis-unstable/ppa repository is added to the apt sources
-#    apt_repository: repo='deb http://ppa.launchpad.net/ubuntugis/ubuntugis-unstable/ubuntu trusty main' state=present
-
-#  - name: Ensure ppa:ubuntugis-unstable/ppa source repository is added to the apt sources
-#    apt_repository: repo='deb-src http://ppa.launchpad.net/ubuntugis/ubuntugis-unstable/ubuntu trusty main' state=present update_cache=yes
-
-
-  # Geospatial packages
-#  - name: Geospatial packges (gdal, qgis, etc)
-#    apt: pkg={{ item }}
-#    with_items:
-#      - gdal-bin
-#      - qgis
-
-  - name: Set zsh to default shell.
-    user: name=berto shell=/bin/zsh
-
-  - name: Python packges
-    pip: name={{ item }}
-    with_items:
-      - virtualenvwrapper
-      - powerline-status
-      - flake8
-
-    # nodejs ppa
-#  - name: Ensure ppa:chris-lea/node.js repository key is added
-#    apt_key: id=314DF160 url='http://keyserver.ubuntu.com/pks/lookup?op=get&search=0x6B827C12C2D425E227EDCA75089EBE08314DF160' 
-
-#  - name: Ensure ppa:chris-lea/node.js to repository is added to the apt sources
-#    apt_repository: repo='deb http://ppa.launchpad.net/chris-lea/node.js/ubuntu trusty main' state=present update_cache=yes
-
-  # node-js
-  - name: Make sure nodejs is installed
-    apt: pkg=nodejs force=yes
-
-  - name: Install bower and grunt-cli
-    npm: name={{ item }} global=yes 
-    with_items:
-     - bower
-     - grunt-cli
-     - jshint
-
-  # setup tmux directories
-  - name: Create .tmux dir
-    file: >
-        path={{ home_dir }}/.tmux/plugins/tpm/
-        owner={{ local_user }}
-        group={{ local_user }}
-        mode=0755
-        state=directory
-        recurse=yes
-
-  - name: Get tmux plugin manager (TPM)
-    sudo: no
-    git: repo=https://github.com/tmux-plugins/tpm
-         dest={{ home_dir }}/.tmux/plugins/tpm
+      - vlc
+      - cifs-utils
