--- a/provision.yml
+++ b/provision.yml
@@ -65,7 +65,7 @@
   # Sublime
   - name: Get SublimeText deb file
     sudo: no
-    get_url: url="http://c758482.r82.cf2.rackcdn.com/sublime-text_build-3083_amd64.deb" dest="{{ install_dir }}sublime.deb"
+    get_url: url="https://download.sublimetext.com/sublime-text_build-3126_amd64.deb" dest="{{ install_dir }}sublime.deb"
 
   - name: Install SublimeText
     apt: deb="{{ install_dir }}sublime.deb"
